# Effective_Cpp

./: .gitignore  12_copy.cpp  30_inline.cpp  README.md  exception.cpp
11_assign/: 11_assign.cpp
31_Minimize_depends/Handle_class/include/: Person.h
31_Minimize_depends/Handle_class/src/: PersonImpl.cpp
31_Minimize_depends/Interface_class/: CMakeLists.txt  main.cpp
31_Minimize_depends/Interface_class/include/: Person.h  RealPerson.h  addrfwd.h
31_Minimize_depends/Interface_class/src/: RealPerson.cpp  addrfwd.cpp
31_build/: main.cpp
31_build/Handle_class/include/: addrfwd.h
31_build/Handle_class/src/: Person.cpp  addrfwd.cpp  datefwd.cpp
31_build/Interface_class/include/: datefwd.h
31_build/Interface_class/src/: datefwd.cpp
31_build/include/: PersonImpl.h  addrfwd.h  datefwd.h
31_build/src/: addrfwd.cpp
34_inheritance/include/: airplane_1.h  airplane_2.h  airplane_3.h  shape.h
35_Consider_Alternatives_to_Virtual_Functions/1_virtual/: game_character_1.h
35_Consider_Alternatives_to_Virtual_Functions/2_NVI/: game_character_2_NVI.h
35_Consider_Alternatives_to_Virtual_Functions/3_Strategy/include/: strategy_pattern.h
40_multi_inheritance/cmake_template/: main.cpp
40_multi_inheritance/cmake_template/include/: iperson.h
40_multi_inheritance/cmake_template/src/: factory.cpp
41_implicit_interface/temp/include/: do.h  widget.h
43_name_in_base/: name.cpp
44_factor_parameter_independent_code_out_of_templates/: factor.cpp
49_new_handler/1_new_handler/: new_handler.cpp
49_new_handler/2_class_new_handler/: main.cpp
(+6 files in other folders)
